--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo_launcher"
+        android:icon="@mipmap/logo_launcher_toms"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo_launcher_round"
+        android:roundIcon="@mipmap/logo_launcher_round_toms"
         android:supportsRtl="true"
         android:theme="@style/Theme.TomsSchedule">
         <activity
