Timer activity with bg and ui and save to db

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,15 @@
         android:roundIcon="@mipmap/logo_launcher_round_toms"
         android:supportsRtl="true"
         android:theme="@style/Theme.TomsSchedule">
+        <service
+            android:name=".ui.timeractivity.CounterService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+        <activity
+            android:name=".ui.timeractivity.TimerActivity"
+            android:exported="false"
+            android:launchMode="singleInstance"/>
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
