Adding music to timer activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TomsSchedule">
         <service
-            android:name=".ui.timeractivity.CounterService"
+            android:name="hu.janny.tomsschedule.ui.timeractivity.CounterService"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
+        </service>
+        <service
+            android:name="hu.janny.tomsschedule.ui.timeractivity.MusicPlayerService"
+            android:enabled="true"
+            android:exported="true">
         </service>
         <activity
             android:name=".ui.timeractivity.TimerActivity"
