--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,11 +52,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.github.skydoves:colorpickerview:2.2.4"
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-runtime:2.4.2"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
+    testImplementation "androidx.room:room-testing:2.4.2"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
     //implementation 'com.github.jitpack:android-example:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
