--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,37 +2,43 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hu.janny.tomsschedule">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo_launcher_toms"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_launcher_round_toms"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TomsSchedule">
+        android:theme="@style/Theme.App.Starting">
+        <activity
+            android:name=".ui.loginregister.ForgotPasswordActivity"
+            android:exported="false" />
 
         <service
             android:name=".ui.timeractivity.CounterService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
         <service
             android:name=".ui.timeractivity.MusicPlayerService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".ui.timeractivity.TimerActivity"
             android:exported="false"
             android:launchMode="singleInstance" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".ui.loginregister.RegisterActivity"
             android:exported="false"
             android:theme="@style/LoginRegisterTheme" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.loginregister.LoginActivity"
             android:exported="false"
             android:theme="@style/LoginRegisterTheme" />
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".ui.splashscreen.SplashScreenActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
