--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
         <activity
             android:name=".ui.timeractivity.TimerActivity"
+            android:theme="@style/Theme.AppCompat.DayNight"
             android:exported="false"
             android:launchMode="singleInstance" />
         <activity
