Hotfix in manifest for password reset

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,6 @@
         android:roundIcon="@mipmap/logo_launcher_round_toms"
         android:supportsRtl="true"
         android:theme="@style/Theme.App.Starting">
-        <activity
-            android:name=".ui.loginregister.ForgotPasswordActivity"
-            android:exported="false" />
 
         <service
             android:name=".ui.timeractivity.MusicPlayerService"
@@ -32,6 +29,10 @@
             android:theme="@style/LoginRegisterTheme" />
         <activity
             android:name=".ui.loginregister.LoginActivity"
+            android:exported="false"
+            android:theme="@style/LoginRegisterTheme" />
+        <activity
+            android:name=".ui.loginregister.ForgotPasswordActivity"
             android:exported="false"
             android:theme="@style/LoginRegisterTheme" />
         <activity
