--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,9 @@ dependencies {
     testImplementation "androidx.room:room-testing:2.4.2"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
     //implementation 'com.github.jitpack:android-example:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    testImplementation "androidx.test:core:1.4.0"
+    testImplementation "org.robolectric:robolectric:4.4"
 }
